[project]
name = "podcast-topicyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "assemblyai>=0.35.1",
    "joblib>=1.4.2",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.0",
    "streamlit>=1.41.0",
    "watchdog>=6.0.0",
]
